fixes maintainability issues